# windows-terminal-ssh-manager

./: .gitignore  Cargo.toml  LICENSE  README.md  install-wrapper.ps1  install.bat  main.py  requirements.txt
.github/workflows/: build.yml
src/: config.rs  crypto.rs  fragment.rs  main.rs  ssh_session.rs
ssh_manager/: __init__.py  cli.py  config.py  crypto.py  fragment.py  launcher.py
tasks/: plan.md  todo.md
